2008-11-23  Sam Steingold  <sds@gnu.org>

	* eval.d (check_funtab): use %ld in printf to avoid a gcc warning
	* pathname.d (LAUNCH): ditto

2008-11-21  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_circ.d: use hash table for circularirty detection in MT builds.

2008-11-21  Vladimir Tzankov  <vtzankov@gmail.com>

	add recursive mutexes
	* constsym.d, subr.d, subrkw.d: MAKE-MUTEX accepts keyword arguments
	:NAME and :RECURSIVE-P. MAKE-EXEMPTIION accepts :NAME.
	* zthread.d (MAKE-MUTEX): create appropriate type of mutex.
	non-recursive by default
	(MUTEX-LOCK): handle recursive mutexes. signal error on re-locking
	non-recursive one
	(MUTEX-UNLOCK): handle recursive mutexes. signal an error if the
	calling thread does not own the mutex
	(MUTEX-OWNER): returns the thread owning the mutex
	(MUTEX-RECURSIVE-P): returns whether the mutex is recursive
	(MAKE-EXEMPTION): use keyword :NAME argument
	(EXEMPTION-WAIT): signal an error if the calling thread does not own
	the mutex
	* lispbibl.d (Mutex): add flags and recurse count
	* threads.lisp: export MUTEX-OWNER and MUTEX-RECURSIVE-P
	(WITH-LOCK): use mutex

2008-11-20  Sam Steingold  <sds@gnu.org>

	* .gdbinit (run_all_tests_parallel): add

2008-11-20  Sam Steingold  <sds@gnu.org>

	* io.d (release_buffers): new macro, should be paired with get_buffers
	(read_token_1, STRING-READER, READ-LINE, pr_symbol_part): use it

2008-11-20  Sam Steingold  <sds@gnu.org>

	* stream.d (rd_ch_terminal3): wrap readline() call in
	begin_blocking_system_call()/end_blocking_system_call()

2008-11-20  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-tests-parallel) [with_threads]: new target

2008-11-20  Vladimir Tzankov  <vtzankov@gmail.com>

	fix memory corruption on thread symvalues initialization
	* spvw_memfile.d (loadmem_from_handle): storage per thread symvalues
	is reallocated correctly.

2008-11-20  Vladimir Tzankov  <vtzankov@gmail.com>

	Do not use GC finalization for mutexes and exemptions